--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 header{
     width:100%;
     height:100vh;
-    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)),url("asset/img/img2-min.jpg");
+    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)),url("asset/img/img2-min.JPG");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
